--- a/friends.html
+++ b/friends.html
@@ -106,7 +106,7 @@
     </div>
 
     <div id="no-mobile">
-        <span>Your screen is not mobile!</span>
+        <span>Your screen is not mobile ㅠㅠ</span>
     </div>
 
     <script src="https://kit.fontawesome.com/de97c4dde9.js" 
